Fix image overlap layout and update image keywords

--- a/cofetarie-site/style.css
+++ b/cofetarie-site/style.css
@@ -444,10 +444,11 @@ ul { list-style: none; }
 
 .despre-images {
   position: relative;
+  padding-bottom: 80px;
 }
 
 .despre-img-main {
-  width: 78%;
+  width: 80%;
   aspect-ratio: 4/5;
   overflow: hidden;
   box-shadow: var(--shadow-lg);
@@ -461,7 +462,7 @@ ul { list-style: none; }
 
 .despre-img-secondary {
   position: absolute;
-  bottom: -40px;
+  bottom: 0;
   right: 0;
   width: 44%;
   aspect-ratio: 1;
